added logout,reset,permission on user moudel
