# src/user/user-routes.js
@@ -4,8 +4,11 @@ import {
   USER_REGISTER,
   ID_POSTFIX,
   USER_PATH_ALLID,
-  USER_RESET,
+  USER_FORGET,
   USER_PERMISSION,
+  USER_SETPASSWORD,
+  USER_LOGOUT,
+  USER_RESET,
 } from "./../common/constants.js";
 import {
   login,
@@ -14,15 +17,17 @@ import {
   update,
   get,
   user_permission,
-  user_reset,
+  user_forget,
   reset_password,
+  user_setpassword,
+  logout,
 } from "./user-handlers.js";
 import { validateSchema } from "../middleware/validate.js";
 import {
   userSchema,
   idSchema,
   loginSchema,
-  userUpdateSchema
+  userUpdateSchema,
 } from "./../common/validationSchemas.js";
 import { isAuthenticated } from "../middleware/auth.js";
 export const userRouter = Router();
@@ -30,8 +35,10 @@ userRouter
   .post(USER_LOGIN, validateSchema.body(loginSchema), login)
   .post(USER_REGISTER, validateSchema.body(userSchema), register)
   .delete(ID_POSTFIX, validateSchema.params(idSchema), remove)
-  .put(ID_POSTFIX,validateSchema.body(userUpdateSchema), update)
+  .put(ID_POSTFIX, validateSchema.body(userUpdateSchema), update)
   .get(USER_PATH_ALLID, get)
   .post(USER_PERMISSION, user_permission)
-  .post(USER_RESET, user_reset)
-  .post("/password-reset/:token", reset_password);
+  .post(USER_SETPASSWORD, user_setpassword)
+  .post(USER_FORGET, user_forget)
+  .post(USER_RESET, reset_password)
+  .post(USER_LOGOUT, logout);
